# odoo-rapid-quant

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/: renovate.json
.github/workflows/: ci.yaml  release-binaries.yml
src/: cli.rs  main.rs  odoo.rs  product.rs  sink.rs  warehouse.rs
src/dialect/: mod.rs  v15.rs
