[package]
name = "odoo-stock-availability"
version = "0.1.0"
license = "LGPL-3.0-or-later"
edition = "2024"
rust-version = "1.85"

[lints.rust]
missing_debug_implementations = "deny"
missing_docs = "deny"
unsafe_code = "deny"
unused_crate_dependencies = "warn"
unused_results = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"

[lints.clippy]
unwrap_used = "deny"

[dependencies]
anyhow = "1"
async-trait = "0.1.87"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3.31"
petgraph = "0.7.1"
regex = "1.11.1"
rust_decimal = "1.36.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "rust_decimal"] }
thiserror = "2"
tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
